[gd_scene load_steps=4 format=3 uid="uid://bb0wjffuwv6sv"]

[ext_resource type="Script" uid="uid://wwwwdyqbehlx" path="res://core/interface/my_panel/tab_inventory/slots/Slot.gd" id="1_hw360"]
[ext_resource type="Texture2D" uid="uid://65p76nmwpxw2" path="res://assets/celestia/interface/inventory/slots/slot_background.png" id="1_ijmr3"]
[ext_resource type="Texture2D" uid="uid://d1mx3m4jkq0p6" path="res://assets/celestia/textures/items/egg.png" id="2_hw360"]

[node name="Slot" type="Button"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(16, 16)
offset_right = 16.0
offset_bottom = 16.0
button_mask = 7
script = ExtResource("1_hw360")

[node name="SlotBackground" type="Sprite2D" parent="."]
position = Vector2(8, 8.5)
texture = ExtResource("1_ijmr3")

[node name="SlotType" type="Sprite2D" parent="."]
visible = false
position = Vector2(8, 8)
scale = Vector2(1.0625, 1.0625)

[node name="ItemSprite" type="Sprite2D" parent="."]
position = Vector2(8, 8)
scale = Vector2(0.820313, 0.820313)
texture = ExtResource("2_hw360")

[node name="ItemAmount" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 16.0
offset_bottom = 18.0
theme_override_font_sizes/font_size = 8
text = "00"
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
